--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
-hello buddy
+Hi team
+we are learning aws with devops
 this is automation work with jenkins 
 we are implementing webhooks for making automation
